--- a/src/components/clickablePosting.module.css
+++ b/src/components/clickablePosting.module.css
@@ -1,5 +1,5 @@
 .buttonShadow{
-    box-shadow: -10px 10px 0px rgb(0, 0, 0), -9px 9px 0px rgb(0, 0, 0), -8px 8px 0px rgb(0, 0, 0), -7px 7px 0px rgb(0, 0, 0), -6px 6px 0px rgb(0, 0, 0), -5px 5px 0px rgb(0, 0, 0), -4px 4px 0px rgb(0, 0, 0), -3px 3px 0px rgb(0, 0, 0), -2px 2px 0px rgb(0, 0, 0), -1px 1px 0px rgb(0, 0, 0);
+    box-shadow: -7px 7px 0px rgb(0, 0, 0), -6px 6px 0px rgb(0, 0, 0), -5px 5px 0px rgb(0, 0, 0), -4px 4px 0px rgb(0, 0, 0), -3px 3px 0px rgb(0, 0, 0), -2px 2px 0px rgb(0, 0, 0), -1px 1px 0px rgb(0, 0, 0);
     transition: all .2s ease-out;
 }
 .buttonShadow:hover{
